bearOS - kernel added more commands

--- a/iso/boot/grub/grub.cfg
+++ b/iso/boot/grub/grub.cfg
@@ -5,6 +5,9 @@ set default=0
 # cfg for mode graphics
 set gfxmode=640x480x32
 set gfxpayload=keep
+GRUB_GFXMODE=1024x768x32
+GRUB_GFXPAYLOAD_LINUX=keep
+
 menuentry "BearOS" {    
     multiboot /boot/kernel    
     boot                      
