--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,12 @@ jobs:
       - name: Build BearOS
         run: |
           make iso
+      
+          
+      - name: Install xorriso
+        run: |
+          sudo apt-get update && sudo apt-get install -y xorriso
+
 
       - name: Run QEMU test
         run: |
