--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Install xorriso
         run: |
           sudo apt-get update && sudo apt-get install -y xorriso
+      - name: Install GRUB dependencies
+        run: sudo apt-get install -y grub-pc-bin grub-common
 
 
       - name: Run QEMU test
