bearOS: new commands: tree, tail, head, uname, ps and find.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
             "binaryPath": "/media/angel/Disco 2/Work/bear/kernel",
             "binaryArgs": []
         }
-    ]
+    ],
+    "files.associations": {
+        "typeinfo": "c"
+    }
 }
