bearOS: nw commited! makefile, kernel.asm and others files :)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "reboot.h": "c",
         "global.h": "c",
         "panic.h": "c",
-        "text_draw.h": "c"
+        "text_draw.h": "c",
+        "delay.h": "c",
+        "itoa.h": "c"
     }
 }
