--- a/iso/boot/grub/grub.cfg
+++ b/iso/boot/grub/grub.cfg
@@ -1,4 +1,8 @@
-# ...
+#   grub.cfg : grub file main
+#  
+# license: Apache 2.0 - Author: NopAngel
+#
+#
 set timeout=5       
 set default=0      
 
