bearOS: new obj

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "panic.h": "c",
         "text_draw.h": "c",
         "delay.h": "c",
-        "itoa.h": "c"
+        "itoa.h": "c",
+        "clear_screen.h": "c",
+        "uptime.h": "c"
     }
 }
